--- a/src/test/resources/examples/simple.petstore.api.yaml
+++ b/src/test/resources/examples/simple.petstore.api.yaml
@@ -29,7 +29,7 @@ paths:
         - application/xml
         - text/xml
         - text/html
-      parameters:
+      items:
         - name: tags
           in: query
           description: tags to filter by
